refining list conversions

--- a/style.css
+++ b/style.css
@@ -74,6 +74,11 @@ span.anno_li_5 {
 span.anno_li_6 {
     min-width:  120px;
 }
+span.anno_li_7 {
+    min-width:  130px;
+}span.anno_li_8 {
+    min-width:  140px;
+}
 .extra_bold {
   font-weight: 900;
   font-size: 125%;
