--- a/style.css
+++ b/style.css
@@ -115,3 +115,11 @@ span.anno_li_7 {
   font-weight: 900;
   font-size: 125%;
 }
+span.anno_blockquote {
+  display: inline-block;
+  margin: 0 0 1.4em 0; 
+   padding: 0 .5em;
+    border: solid #ddd;
+    border-width: 0 0 0 .25em;
+
+}
