--- a/style.css
+++ b/style.css
@@ -123,3 +123,14 @@ span.anno_blockquote {
     border-width: 0 0 0 .25em;
 
 }
+
+span.anno_hr {
+    min-width: 580px;
+    border-bottom-color: black;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    background-color: #fff;
+     display: inline-block;	
+     padding-left: 8px;	
+	 padding-right: 8px;    
+}
