--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.annotation,  .annotation_r, .annotation_r_p {
+.annotation,  .annotation_r, .anno_narrow_r, .anno_deep_r
+ {
 	border: 2px solid black;
 	width: 620px;
 	height: 120px;
@@ -14,7 +15,7 @@
 	height: 160px;
 }
 
-.anno_narrow_r ,.anno_deep_r, .annotation_r, .anno-r {
+.anno_narrow_r, .anno_deep_r, .annotation_r {
     border-radius: 15px;
  }
  
