--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.annotation,  .annotation_r, .anno_narrow_r, .anno_deep_r
+.annotation,  .annotation_r, .anno_narrow_r, .anno_deep_r,
+.anno_deep, .anno_narrow
  {
 	border: 2px solid black;
 	width: 620px;
