--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-.annotation {
+.annotation,  .annotation_r, .anno_narrow_r, .anno_deep_r,
+.anno_deep, .anno_narrow
+ {
 	border: 2px solid black;
 	width: 620px;
 	height: 120px;
@@ -8,20 +10,26 @@
 	visibility:hidden;
 	z-index:999;
 }
-.anno_narrow{
+.anno_narrow, .anno_narrow_r {
 	height: 60px;
 }
-.anno_deep{
+
+.anno_deep, .anno_deep_r{
 	height: 160px;
 }
-#anno_close {
+
+.anno_narrow_r, .anno_deep_r, .annotation_r {
+    border-radius: 15px;
+ }
+ 
+span[id^='anno_close'] {
      min-width: 590px;
      background-color: #eee;
      display: inline-block;	
      padding-left: 8px;	
 	 padding-right: 8px;
 	 text-align: right;
-     font-size: 85%;	 
+     font-size: 80%;	 
 }
 span.anno_exit {
 	min-width:50px;
