adds inline-block to annotation css def

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 	padding: 8px;
 	position:absolute;
 	visibility:hidden;
+    display:inline-block;
 	z-index:999;
 }
 .anno_narrow, .anno_narrow_r {
